# sentence-transformers-burn

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  requirements.txt
scripts/: dump.py  prepare_test.py
src/: bert_loader.rs  lib.rs
src/model/: bert_embeddings.rs  bert_encoder.rs  bert_model.rs  mod.rs
tests/: load_and_compare.rs
