[package]
name = "sentence_transformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { path="./burn/burn" } # v0.8.0 was not compiling for some reason
burn-wgpu = { path="./burn/burn-wgpu" }
burn-tch = { path="./burn/burn-tch" }
candle = { path="./candle/candle-core", package = "candle-core", features = ["accelerate"] }
libm = "0.2.7"
npy = "0.4.0"
ndarray = "0.15.6"
npy-derive = "0.4.0"
serde = "1"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
serde_json = "1.0.105"

[[bin]]
name = "server"
path = "src/bin/server.rs"
